--- a/public/css/scss/cv.scss
+++ b/public/css/scss/cv.scss
@@ -536,6 +536,7 @@ p.flags {
 
 #scoreForm {
   width: 80%;
+  max-width: '400px';
   display: none;
   vertical-align: middle;
   margin-left: 10%;
