--- a/public/index.pug
+++ b/public/index.pug
@@ -16,6 +16,8 @@ append content
             #s0leil
             a.twitter-follow-button(href='https://twitter.com/K431M1?ref_src=twsrc%5Etfw' data-size='large' data-show-count='false') Follow @K431M1
             br
+            canvas.background
+            //audio#bonnie(src='./static/sound/BONNIE.mp3' autoplay='' loop='')
       //include joust.pug
       //include adm1n.pug
 append scripts
@@ -30,3 +32,5 @@ append scripts
     $('#resume').addClass('css3button')
     $('#admin').removeClass('css3buttonRed')
     $('#admin').addClass('css3button')
+    //var bonnie = window.document.getElementById('bonnie')
+    //bonnie.play()
