--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -525,6 +525,7 @@ p.flags {
 
 #scoreForm {
   width: 80%;
+  max-width: "400px";
   display: none;
   vertical-align: middle;
   margin-left: 10%;
