--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -49,6 +49,6 @@ html(lang="en")
         connectParticles: true,
         maxParticles: 50
         })
-        console.log(document.querySelector(".content"))
-        $('.background').css('height', document.querySelector(".content").clientHeight)
+        //console.log(document.querySelector(".content"))
+        $('.background').css('height', document.querySelector(".table-cell").clientHeight)
         }
