--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -34,6 +34,10 @@ body {
     background-color: $colorBody;
 }
 
+button, input {
+	overflow: visible;
+	max-width: 300px;
+}
 .background {
     position: absolute;
     top: 0;
