moon blinking fixed

--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -49,6 +49,6 @@ html(lang="en")
         connectParticles: true,
         maxParticles: 50
         })
-        console.log(document.querySelector(".content").offsetHeight)
+        //console.log(document.querySelector(".content").offsetHeight)
         $('.background').css('height', document.querySelector(".content").clientHeight + 'px')
         }
