--- a/public/css/scss/cv.scss
+++ b/public/css/scss/cv.scss
@@ -226,9 +226,9 @@ p.flags {
 
 .foto {
   position: relative;
-  margin: 3px;
-  text-align: right;
+  margin: 1%;
   border-radius: 10px;
+  height: 98%;
   float: right;
 }
 
