--- a/public/cv.pug
+++ b/public/cv.pug
@@ -11,7 +11,7 @@ append content
             //img.pdf.french(src='/static/img/downPdf.svg' alt='download pdf' height='64')
             //a.pdf.english(href='/static/img/cvMikaelEn.pdf')
             //img.pdf.english(src='/static/img/downPdf.svg' alt='download pdf' height='64')
-            img.foto(src='/static/img/photoCV.jpg' alt='Mafoto' height='84' onclick='openlinkedin();')
+            img.foto(src='/static/img/photoCV.jpg' alt='Mafoto' onclick='openlinkedin();')
             p.moiPara Mika&euml;l GARCIA 37 y/o 
             p.moiPara 65 rue de la republique 
             p.moiPara 82000 MONTAUBAN 
