--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -6,13 +6,13 @@ append content
 		.table-cell
 			#m0ncentrage
 				#INDEX
-					h1.liens
+					h2.liens
 						.english ADHD and High IQ
 						.french TDAH et haut potentiel
 					p.flags
 						img#english(src='/static/img/uk.svg' alt='English' height='30')
 						img#french(src='/static/img/france.svg' alt='Français' height='30')
-					h4.auteurs
+					h5.auteurs
 						.english Written by:
 						.french Ecrit par:
 						span Lynn-nore Chittom
@@ -32,9 +32,9 @@ append content
 						span 25/05/2011
 						br
 						.french Traduit par: 
-						span.french Mikaël Garcia le 19/03/2020
+						span.french Mikael Garcia le 23/05/2020
 					.competen
-						h2.liens
+						h3.liens
 							.english What is the Connection 
 							.french Quels liens
 						span.english
@@ -121,7 +121,7 @@ append content
 								span.english Impulsivity
 								span.french Impulsivité
 					.competen
-						h2.lien
+						h3.lien
 							span.english How the ADHD Hides
 							span.french Comment le TDAH se camoufle
 						span.english
