--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -345,9 +345,9 @@ template {
 }
 
 .css3buttonRed, .css3button {
-  width: 70px;
+  width: 75px;
   border-radius: 28px;
-  padding: 5px 2px 7px 2px;
+  padding: 5px 2px 5px 2px;
 }
 
 body,
@@ -501,8 +501,8 @@ a {
 }
 
 .css3button {
-  font-family: monospace;
-  font-size: 1.3em;
+  font-family: "ibm";
+  font-size: 1em;
   background-image: linear-gradient(to bottom, rgba(52, 152, 219, 0.901), rgba(19, 43, 121, 0.5));
 }
 
@@ -517,9 +517,9 @@ a {
   margin-left: 5px;
   margin-right: 5px;
   color: white;
-  font-size: 1.3em;
+  font-size: 1em;
   text-align: center;
-  font-family: monospace;
+  font-family: "ibm";
   background-image: linear-gradient(to bottom, rgba(221, 60, 60, 0.9), rgba(221, 60, 60, 0.9));
 }
 
