traduction fr index + minor fixes

--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -91,6 +91,9 @@ iframe {
     text-align: center;
 }
 
+.me {
+    margin: 1.5em;
+}
 
 h1,
 h2,
@@ -101,7 +104,7 @@ nav {
     text-align: center;
     //font-family: $myFont;
     font-family: 'ibm';
-    margin: 0.5em;
+    margin: 0.3em;
 }
 
 h5 {
@@ -338,4 +341,10 @@ a {
     margin-top: 0.5%;
     padding-bottom: 175px;
     text-align: center;
+}
+
+.auteurs {
+    margin-top: 0;
+    font-size: 1em;
+    color: white;
 }
