--- a/public/index.pug
+++ b/public/index.pug
@@ -5,16 +5,17 @@ append content
       #m0ncentrage
         .m0ncentrageParafoot
           #INDEX
-            h1
+            h2
               .english Welcome to my dev lab
               .french Bienvenue dans mon Labo de Dev
             video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
               source( src='/static/video/theOneFinal.webm' type='video/webm')
             button#BtnJs0nPl4Y PLAY
-            h2
+            h3.me
               .english My name is Mikael 
-              .english I am an IBM and javaScript Developer
               .french Je suis Mikael 
+              br
+              .english I am a javaScript and IBM Developer
               .french Developpeur IBM et javaScript
             include jeuCV.pug
             .paraFoot.english This website hosts my projects, experiences and skills
