--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -539,7 +539,7 @@ a {
   width: 18%;
   margin-left: 39%;
   margin-right: 39%;
-  margin-top: 1%;
+  top: -50px;
   font-family: monospace;
   border-radius: 28px;
   font-size: 1em;
