--- a/public/cv.pug
+++ b/public/cv.pug
@@ -13,8 +13,8 @@ append content
             //img.pdf.english(src='/static/img/downPdf.svg' alt='download pdf' height='64')
             img.foto(src='/static/img/photoCV.jpg' alt='Mafoto' onclick='openlinkedin();')
             p.moiPara Mika&euml;l GARCIA 37 y/o 
-            p.moiPara 65 rue de la republique 
-            p.moiPara 82000 MONTAUBAN 
+            p.moiPara XX rue askMe 
+            p.moiPara 75004 PARIS 
             p.moiPara +33 695 490 777
             p.moiPara garcia.mikael@gmail.com
             p.moiPara http://mikael.ml
@@ -30,19 +30,20 @@ append content
             .informatiquesCont.french.english.spanish
               h3.titreH3 Front-End
               .informatiques#informatique
+                .infoJeu RPGLE
+                .infoJeu CLP
+                .infoJeu DB2 SQL
                 .infoJeu ECMAScript 6
                 .infoJeu HTML5
                 .infoJeu jade/PUG
                 .infoJeu JQUERY
                 .infoJeu SCSS
-                .infoJeu PL/SQL
-                .infoJeu BootStrap
+                .infoJeu DOM
                 .infoJeu AngularJS
               h3.titreH3 Back-End
               .informatiques#informatique
                 .infoJeu IBM i
                 .infoJeu NodeJS
-                .infoJeu IBM DB2
                 .infoJeu ExpressJS
                 .infoJeu Ajax
                 .infoJeu mongoDB
