--- a/public/index.pug
+++ b/public/index.pug
@@ -11,15 +11,17 @@ append content
             video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
               source( src='/static/video/theOneFinal.webm' type='video/webm')
             button#BtnJs0nPl4Y PLAY
-            h3.me
+            h2
               .english My name is Mikael 
               .french Je suis Mikael 
-              br
-              .english I am a javaScript and IBM Developer
-              .french Developpeur IBM et javaScript
+              .english I am an IBM SQL RPGLE NODEJS Developer
+              .french Developpeur IBM SQL RPGLE NODEJS
+            br
             include jeuCV.pug
-            .paraFoot.english This website hosts my projects, experiences and skills
-            .paraFoot.french Ce site héberge mes projets, expériences et compétences
+            br
+            h2
+              .english This website hosts my experiences and skills
+              .french Ce site héberge mes sexpériences et compétences
             #s0leil
             a.twitter-follow-button(href='https://twitter.com/K431M1?ref_src=twsrc%5Etfw' data-size='large' data-show-count='false') Follow @K431M1
             br
