--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -37,32 +37,35 @@ append content
       //h2.titreH2.spanish  Competencias
       h2.titreH2#skills Skills
       .informatiquesCont#informatique
-        h3.titreH3 Front End
+        h3.titreH3 Front-End
         .informatiques#informatique
+          .infoJeu RPGLE
+          .infoJeu CLP
+          .infoJeu DB2 SQL
           .infoJeu ECMAScript 6
-          .infoJeu jade/PUG
           .infoJeu HTML5
+          .infoJeu jade/PUG
           .infoJeu JQUERY
           .infoJeu SCSS
-          .infoJeu BootStrap
+          .infoJeu DOM
           .infoJeu AngularJS
-        h3.titreH3 Back End
+        h3.titreH3 Back-End
         .informatiques#informatique
+          .infoJeu IBM i
           .infoJeu NodeJS
           .infoJeu ExpressJS
           .infoJeu Ajax
-          .infoJeu DB2
-          .infoJeu mysql
           .infoJeu mongoDB
-          .infoJeu WebSocket
         h3.titreH3 Tools
-        .informatiquesLast
-          .infoJeu IBM i
-          .infoJeu Mac OSx
-          .infoJeu MS Windows
+        .informatiquesLast#informatique
+          .infoJeu LINUX
+          .infoJeu osX
+          .infoJeu Windows
           .infoJeu Git
-          .infoJeu AutoCAD
+          .infoJeu bsh/zsh
           .infoJeu Photoshop
+          .infoJeu IBM RDi
+          .infoJeu ARCAD
       .btp#btp
         h3.titreH3 Technics Design
         .info.french R&eacute;aliser l&rsquo;&eacute;tude technique d&rsquo;un projet de construction et en estimer le co&ucirc;t
