--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -239,7 +239,7 @@ a {
     width: 18%;
     margin-left: 39%;
     margin-right: 39%;
-    margin-top: 1%;
+    top: -50px;
     font-family: $myFont;
     border-radius: 28px;
     font-size: 1em;
