--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -408,7 +408,8 @@ iframe {
 }
 
 .me {
-  margin: 1.5em;
+  margin: 0.3em;
+  padding-bottom: 1em;
 }
 
 h1,
@@ -422,8 +423,14 @@ nav {
   margin: 0.3em;
 }
 
+h2,
 h5 {
-  margin: 0.5em;
+  margin-bottom: 0.5em;
+  margin-top: 1em;
+}
+
+.twitter-follow-button {
+  margin: 1em;
 }
 
 nav ul {
