--- a/public/index.pug
+++ b/public/index.pug
@@ -21,13 +21,9 @@ append content
               .english This website hosts my experiences and skills
               .french Ce site héberge mes sexpériences et compétences
             #s0leil
-            a.twitter-follow-button(href='https://twitter.com/K431M1?ref_src=twsrc%5Etfw' data-size='large' data-show-count='false') Follow @K431M1
+            a(href='https://twitter.com/K431M1?ref_src=twsrc%5Etfw' data-size='large' data-show-count='false') Follow @K431M1
             canvas.background
-            //audio#bonnie(src='./static/sound/BONNIE.mp3' autoplay='' loop='')
-      //include joust.pug
-      //include adm1n.pug
 append scripts
-  script(async='' src='https://platform.twitter.com/widgets.js' charset='utf-8')
   script(src='/static/js/soleil.js')
   script(src='/static/js/BrickBreaker.js')
   script(src='/static/js/layoutNav.js')
