express-minify debugged + Defer js = GTmetrix 99%

--- a/public/index.pug
+++ b/public/index.pug
@@ -24,9 +24,9 @@ append content
             a(href='https://twitter.com/K431M1?ref_src=twsrc%5Etfw' data-size='large' data-show-count='false') Follow @K431M1
             canvas.background
 append scripts
-  script(src='/static/js/soleil.js')
-  script(src='/static/js/BrickBreaker.js')
-  script(src='/static/js/layoutNav.js')
+  script(src='/static/js/soleil.js' defer)
+  script(src='/static/js/BrickBreaker.js' defer)
+  script(src='/static/js/layoutNav.js' defer)
   script.
     $('#intro').removeClass('css3button')
     $('#intro').addClass('css3buttonRed')
