Update CV suite entretien

--- a/public/cv.pug
+++ b/public/cv.pug
@@ -88,96 +88,116 @@ append content
             .jobs
               h3.titreH3.french Developpeur logiciel IBM i
               h3.titreH3.english IBM i programmer
-              .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
-              .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
-              .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
+              span 04/08/2019 => 17/07/2020
+              .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban
+              .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban
+              .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban
             .jobs
               h3.titreH3.french Ingenieur etude et developpement IBM i
               h3.titreH3.english IBM i software engineer
-              .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
-              .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
-              .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
+              span 04/02/2019 => 04/08/2019 
+              .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01
+              .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01
+              .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01 04/02/2019 => 04/08/2019
             .jobs
               h3.titreH3 Webmaster
-              .infojob.french Mise &agrave; jour de la base de donn&eacute;es site Ecommerce (magento) www.snow-concept.com, l&rsquo;Alpe d&rsquo;Huez, d&eacute;cembre 2016
-              .infojob.english Update of the Ecommerce website database (magento) www.snow-concept.com, Alpe d'Huez, December 2016
-              .infojob.spanish Actualización de la base de datos del sitio snow-concept.com (magento), Alpe d'Huez, diciembre de 2016
+              span 06/12/2016 => 16/01/2017 
+              .infojob.french Mise &agrave; jour de la base de donn&eacute;es site Ecommerce (magento) www.snow-concept.com, l&rsquo;Alpe d&rsquo;Huez
+              .infojob.english Update of the Ecommerce website database (magento) www.snow-concept.com, Alpe d'Huez
+              .infojob.spanish Actualización de la base de datos del sitio snow-concept.com (magento), Alpe d'Huez
             .jobs
               h3.titreH3.french Technicien audio-visuel
-              .infojob.french Accessoiriste: JLA productions, Martigues 2015
-              .infojob.french Assistant r&eacute;gisseur: Auteurs Associ&eacute;s, Grasse 2014
-              .infojob.french Renfort d&eacute;coration et figurations: Gazelle Cie, DEMD, Europacorp, Marseille 2013
+              span.french 2013 => 2015 
+              .infojob.french Accessoiriste: JLA productions, Martigues
+              .infojob.french Assistant r&eacute;gisseur: Auteurs Associ&eacute;s
+              .infojob.french Renfort d&eacute;coration et figurations: Gazelle Cie, DEMD, Europacorp, Marseille
               h3.titreH3.english Audio-visual technician
-              .infojob.english Props manager: JLA productions, Martigues 2015
-              .infojob.english Assistant director: Auteurs Associ&eacute;s, Grasse 2014
-              .infojob.english Ripper and figuration: Gazelle Cie, DEMD, Europacorp, Marseille 2013
+              span.english 2013 => 2015 
+              .infojob.english Props manager: JLA productions, Martigues
+              .infojob.english Assistant director: Auteurs Associ&eacute;s, Grasse
+              .infojob.english Ripper and figuration: Gazelle Cie, DEMD, Europacorp, Marseille
               h3.titreH3.spanish Técnico audiovisual
-              .infojob.spanish gerente de apoyos: JLA productions, Martigues 2015
-              .infojob.spanish Subgerente: Auteurs Associ&eacute;s, Grasse 2014
-              .infojob.spanish Refuerzo de decoración y figuración: Gazelle Cie, DEMD, Europacorp, Marseille 2013
+              .infojob.spanish gerente de apoyos: JLA productions, Martigues
+              .infojob.spanish Subgerente: Auteurs Associ&eacute;s, Grasse
+              .infojob.spanish Refuerzo de decoración y figuración: Gazelle Cie, DEMD, Europacorp, Marseille
             .jobs
               h3.titreH3.french Dessinateur Projeteur HVAC
-              .infojob.french Etude des projets de construction ERP &quot;Castorama&quot;, AUXITEC ing&eacute;nierie, Hy&egrave;res, septembre 2012
+              span.french 09/2012 => 12/2012 
+              .infojob.french Etude des projets de construction ERP &quot;Castorama&quot;, AUXITEC ing&eacute;nierie, Hy&egrave;res,
               h3.titreH3.english HVAC designer
-              .infojob.english Study of construction projects ERP "Castorama" Toulouse union and Antibes, AUXITEC engineering, Hyères, September 2012
+              span.english 09/2012 => 12/2012 
+              .infojob.english Study of construction projects ERP "Castorama" Toulouse union and Antibes, AUXITEC engineering, Hyères
               h3.titreH3.spanish Diseñador de HVAC
-              .infojob.spanish Estudio de proyectos de construcción de tiendas "Castorama" Toulouse Union y Antibes, ingeniería AUXITEC, Hyères, septiembre de 2012
+              .infojob.spanish Estudio de proyectos de construcción de tiendas "Castorama" Toulouse Union y Antibes, ingeniería AUXITEC, Hyères
             .jobs
               h3.titreH3.french Developpeur PHP HTML CSS
-              .infojob.french Introduction &agrave; JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
+              span.french 03/2012 => 06/2012 
+              .infojob.french Introduction &agrave; JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde
               h3.titreH3.english PHP CSS HTML Developer
-              .infojob.english Introduction to JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
+              span.english 03/2012 => 06/2012 
+              .infojob.english Introduction to JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde
               h3.titreH3.spanish Desarrollador PHP CSS HTML
-              .infojob.spanish introducción a JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
+              .infojob.spanish introducción a JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde
             .jobs
               h3.titreH3.french Technicien etudes en Design et Decoration
-              .infojob.french Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde, 2010-2012
+              span.french 09/2010 => 06/2012 
+              .infojob.french Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde
               h3.titreH3.english Design and Decoration Technician
-              .infojob.english Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde, 2010-2012
+              span.english 09/2010 => 06/2012 
+              .infojob.english Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde
               h3.titreH3.spanish Técnico de Diseño y Decoración
-              .infojob.spanish Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde, 2010-2012
+              .infojob.spanish Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde
             .jobs
               h3.titreH3.french Vendeur et Technicien Ski
-              .infojob.french Nevada Sports l&rsquo;Alpe d&rsquo;Huez, 2008-2009
+              span.french 12/2008 => 04/2009 
+              .infojob.french Nevada Sports l&rsquo;Alpe d&rsquo;Huez
               h3.titreH3.english Ski Salesman and Technician
-              .infojob.english Nevada Sports l&rsquo;Alpe d&rsquo;Huez, 2008-2009
+              span.english 12/2008 => 04/2009 
+              .infojob.english Nevada Sports l&rsquo;Alpe d&rsquo;Huez
               h3.titreH3.spanish Vendedor de esquí y de material deportivo
-              .infojob.spanish Nevada Sports l&rsquo;Alpe d&rsquo;Huez, 2008-2009
+              .infojob.spanish Nevada Sports l&rsquo;Alpe d&rsquo;Huez
             .jobs
               h3.titreH3.french Technicien ADSL
-              .infojob.french British Telecom Critical Systems Le Plessis-Robinson, 2008
+              span.french 07/2008 => 12/2008 
+              .infojob.french British Telecom Critical Systems Le Plessis-Robinson
               h3.titreH3.english ADSL Technician
-              .infojob.english British Telecom Critical Systems Le Plessis-Robinson, 2008
+              span.english 07/2008 => 12/2008 
+              .infojob.english British Telecom Critical Systems Le Plessis-Robinson
               h3.titreH3.spanish Técnico de ADSL
-              .infojob.spanish British Telecom Critical Systems Le Plessis-Robinson, 2008
+              .infojob.spanish British Telecom Critical Systems Le Plessis-Robinson
             .jobs
               h3.titreH3.french Technicien Ski et Snowboard
-              .infojob.french Intersport, l&rsquo;Alpe d&rsquo;Huez, 2007-2008
+              span.french 12/2007 => 04/2008 
+              .infojob.french Intersport, l&rsquo;Alpe d&rsquo;Huez
               h3.titreH3.english Ski and Snowboard Technician
-              .infojob.english Intersport, l&rsquo;Alpe d&rsquo;Huez, 2007-2008
+              span.english 12/2007 => 04/2008 
+              .infojob.english Intersport, l&rsquo;Alpe d&rsquo;Huez
               h3.titreH3.spanish Técnico de esquí y snowboard
-              .infojob.spanish Intersport, l&rsquo;Alpe d&rsquo;Huez, 2007-2008
+              .infojob.spanish Intersport, l&rsquo;Alpe d&rsquo;Huez
             .jobs
               h3.titreH3.french Technicien systemes et Administrateur reseaux microsoft
               h3.titreH3.english Systems technician and Microsoft Network Administrator 
               h3.titreH3.spanish Técnico y Administrador de Sistemas y Redes microsoft
-              .infojob.french Administration serveurs Windows et clients GNU/LINUX Maintenance et installation systemes informatique Developpement html php (script de backup) SECOB, St Jean-de-la-Ruelle, 2005-2007
-              .infojob.english Windows server administration and GNU / LINUX clients Maintenance and installation of computer systems, html php development (backup script), SECOB, St Jean-de-la-Ruelle, 2005-2007
-              .infojob.spanish Administración de servidores Windows y clientes GNU / LINUX Mantenimiento e instalación de sistemas infojobrmáticos, desarollamiento html php (script de copia de seguridad), SECOB, St Jean-de-la-Ruelle, 2005-2007
+              span 09/2005 => 06/2007 
+              .infojob.french Administration serveurs Windows et clients GNU/LINUX Maintenance et installation systemes informatique Developpement html php (script de backup) SECOB, St Jean-de-la-Ruelle
+              .infojob.english Windows server administration and GNU / LINUX clients Maintenance and installation of computer systems, html php development (backup script), SECOB, St Jean-de-la-Ruelle
+              .infojob.spanish Administración de servidores Windows y clientes GNU / LINUX Mantenimiento e instalación de sistemas infojobrmáticos, desarollamiento html php (script de copia de seguridad), SECOB, St Jean-de-la-Ruelle
             .jobs
               h3.titreH3.french Technicien Systemes et Reseaux
-              .infojob.french Maintenance et installation systemes informatique Developpement html php d&apos;un site de devis securis&eacute; Emergence, Orl&eacute;ans, 2004
               h3.titreH3.english Systems and Networks Technician
-              .infojob.english Maintenance and installation of computer systems PHP html development of a secured quote site Emergence, Orléans, 2004
               h3.titreH3.spanish Técnico de Sistemas y Redes
+              span 03/2005 => 06/2005 
+              .infojob.french Maintenance et installation systemes informatique Developpement html php d&apos;un site de devis securis&eacute; Emergence, Orl&eacute;ans, 2004
+              .infojob.english Maintenance and installation of computer systems PHP html development of a secured quote site Emergence, Orléans, 2004
               .infojob.spanish Mantenimiento e instalación de sistemas infojobrmáticos PHP html desarrollo de un sitio de cotizaciones seguras Emergence, Orléans, 2004
             .jobs
               h3.titreH3.french Adjoint au responsable de magasin
-              .infojob.french Micromania, St Jean de la Ruelle, 2003
               h3.titreH3.english Assistant to the store manager
-              .infojob.english Micromania, St Jean de la Ruelle, 2003
               h3.titreH3.spanish Asistente del gerente de la tienda
-              .infojob.spanish Micromania, St Jean de la Ruelle, 2003
+              span 06/2003 => 02/2004  
+              .infojob.french Micromania, St Jean de la Ruelle
+              .infojob.english Micromania, St Jean de la Ruelle
+              .infojob.spanish Micromania, St Jean de la Ruelle
             .jobs
               h3.titreH3.french Emplois etudiant
               .infojob.french Conseiller de vente en espace culturel Leclerc, serveur/barman, Ouvrier boulanger, Employ&eacute; polyvalent chez Intermarch&eacute;
@@ -191,7 +211,7 @@ append content
             h3.titreH2.spanish Formación
             .jobs
               h3.titreH3 Pepiniere IBM
-              span OCSI Paris 01
+              span 2018 OCSI Paris 01
               .infojob.french Développement RPGLE et CL
               .infojob.english Développement RPGLE et CL
               .infojob.spanish Développement RPGLE et CL
@@ -205,7 +225,7 @@ append content
               h3.titreH3.french Developpeur JavaScript FullStack
               h3.titreH3.english FullStack Javascript Developer
               h3.titreH3.spanish Desarollador Javascript de pila completa
-              span IFOCOP Paris 11
+              span 2017 IFOCOP Paris 11
               .infojob.french Développement et management d&apos;un projet web
               .infojob.english Development and management of a web project
               .infojob.spanish Desarolla y gestión de un proyecto web
@@ -219,7 +239,7 @@ append content
               h3.titreH3.french TP de technicien etude en batiment option dessin
               h3.titreH3.english Construction Engineer Technician Drawing Option
               h3.titreH3.spanish Técnico de Ingeniería de Construcción Opción de Dibujo
-              span AFPA La Valette-du-var
+              span 2009 AFPA La Valette-du-var
               .infojob Photoshop, Autocad, Archicad, Artlantis
               .infojob.french Design, techniques et normes de construction
               .infojob.english Design, techniques and construction standards
@@ -229,7 +249,7 @@ append content
               .infojob.spanish Nociones de urbanismo y carreteras
             .jobs
               h3.titreH3 DUT informatique genie logiciel
-              span IUT d'Orléans
+              span 2003 IUT d'Orléans
               .infojob.french Syst&eacute;mes et R&eacute;seaux: Administration et d&eacute;ploiementent r&eacute;seau de syst&egrave;mes en environnement Linux, regexp/assembleur
               .infojob.french Base de Donn&eacute;es: Analyse (merise), conception (MCD, MCT), maintenance
               .infojob.french Programmation: Langage C, C++, SQL, bsh, assembly language
@@ -241,10 +261,11 @@ append content
               .infojob.spanish Programación: Langage C, C++, SQL, bsh, assembly language
             .jobs
               h3.titreH3.french Baccalaureat Scientifique
-              .infojob.french Sp&eacute;cialit&eacute; physique-chimie
               h3.titreH3.english Scientific Baccalaureate Diploma
-              .infojob.english Specialty physics-chemistry
               h3.titreH3.spanish Bachillerato Científico        
+              span 2001 Orléans
+              .infojob.french Sp&eacute;cialit&eacute; physique-chimie
+              .infojob.english Specialty physics-chemistry
               .infojob.spanish Especialidad física-química
           .competen#complementaire
             .infojob.french Permis : auto, moto.
