--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -149,7 +149,7 @@ p.flags {
 
 .foto {
   position: relative;
-  margin: 1%;
+  margin: 5px;
   border-radius: 10px;
   height: 98%;
   float: right;
