--- a/public/cv.pug
+++ b/public/cv.pug
@@ -88,31 +88,29 @@ append content
             .jobs
               h3.titreH3.french Developpeur logiciel IBM i
               h3.titreH3.english IBM i programmer
-              span 04/08/2019 => 17/07/2020
-              .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban
-              .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban
-              .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban
+              .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi)
+              .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi)
+              .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi)
+              span 04/08/2019 => 17/07/2020:  Pro A Pro, Montauban
             .jobs
               h3.titreH3.french Ingenieur etude et developpement IBM i
               h3.titreH3.english IBM i software engineer
-              span 04/02/2019 => 04/08/2019 
-              .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01
-              .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01
-              .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01 04/02/2019 => 04/08/2019
+              .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi)
+              .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi)
+              .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi)
+              span 04/02/2019 => 04/08/2019: OCSI, Paris I
             .jobs
               h3.titreH3 Webmaster
-              span 06/12/2016 => 16/01/2017 
-              .infojob.french Mise &agrave; jour de la base de donn&eacute;es site Ecommerce (magento) www.snow-concept.com, l&rsquo;Alpe d&rsquo;Huez
-              .infojob.english Update of the Ecommerce website database (magento) www.snow-concept.com, Alpe d'Huez
-              .infojob.spanish Actualización de la base de datos del sitio snow-concept.com (magento), Alpe d'Huez
+              .infojob.french Mise &agrave; jour de la base de donn&eacute;es site Ecommerce (magento)
+              .infojob.english Update of the Ecommerce website database (magento)
+              .infojob.spanish Actualización de la base de datos del sitio snow-concept.com (magento)
+              span 06/12/2016 => 16/01/2017: www.snow-concept.com, l'Alpe d'Huez
             .jobs
               h3.titreH3.french Technicien audio-visuel
-              span.french 2013 => 2015 
               .infojob.french Accessoiriste: JLA productions, Martigues
               .infojob.french Assistant r&eacute;gisseur: Auteurs Associ&eacute;s
               .infojob.french Renfort d&eacute;coration et figurations: Gazelle Cie, DEMD, Europacorp, Marseille
               h3.titreH3.english Audio-visual technician
-              span.english 2013 => 2015 
               .infojob.english Props manager: JLA productions, Martigues
               .infojob.english Assistant director: Auteurs Associ&eacute;s, Grasse
               .infojob.english Ripper and figuration: Gazelle Cie, DEMD, Europacorp, Marseille
@@ -120,84 +118,80 @@ append content
               .infojob.spanish gerente de apoyos: JLA productions, Martigues
               .infojob.spanish Subgerente: Auteurs Associ&eacute;s, Grasse
               .infojob.spanish Refuerzo de decoración y figuración: Gazelle Cie, DEMD, Europacorp, Marseille
+              span 2013 => 2015 
             .jobs
               h3.titreH3.french Dessinateur Projeteur HVAC
-              span.french 09/2012 => 12/2012 
-              .infojob.french Etude des projets de construction ERP &quot;Castorama&quot;, AUXITEC ing&eacute;nierie, Hy&egrave;res,
+              .infojob.french Etude des projets de construction ERP &quot;Castorama&quot; Toulouse Union et Antibes
               h3.titreH3.english HVAC designer
-              span.english 09/2012 => 12/2012 
-              .infojob.english Study of construction projects ERP "Castorama" Toulouse union and Antibes, AUXITEC engineering, Hyères
+              .infojob.english Study of construction projects ERP "Castorama" Toulouse union and Antibes
               h3.titreH3.spanish Diseñador de HVAC
               .infojob.spanish Estudio de proyectos de construcción de tiendas "Castorama" Toulouse Union y Antibes, ingeniería AUXITEC, Hyères
+              span.english 09/2012 => 12/2012: AUXITEC engineering, Hyères
+              span.french 09/2012 => 12/2012: AUXITEC ing&eacute;nierie, Hy&egrave;res
             .jobs
               h3.titreH3.french Developpeur PHP HTML CSS
-              span.french 03/2012 => 06/2012 
-              .infojob.french Introduction &agrave; JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde
+              .infojob.french Introduction &agrave; JavaScript (JQuery) www.stand-service.com
               h3.titreH3.english PHP CSS HTML Developer
-              span.english 03/2012 => 06/2012 
               .infojob.english Introduction to JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde
               h3.titreH3.spanish Desarrollador PHP CSS HTML
               .infojob.spanish introducción a JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde
+              span 03/2012 => 06/2012:  Alphabet Stand Service, La Garde
             .jobs
               h3.titreH3.french Technicien etudes en Design et Decoration
-              span.french 09/2010 => 06/2012 
-              .infojob.french Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde
+              .infojob.french Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;)
               h3.titreH3.english Design and Decoration Technician
-              span.english 09/2010 => 06/2012 
-              .infojob.english Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde
+              .infojob.english Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;)
               h3.titreH3.spanish Técnico de Diseño y Decoración
-              .infojob.spanish Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde
+              .infojob.spanish Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;)
+              span 09/2010 => 06/2012: La Garde
             .jobs
               h3.titreH3.french Vendeur et Technicien Ski
-              span.french 12/2008 => 04/2009 
-              .infojob.french Nevada Sports l&rsquo;Alpe d&rsquo;Huez
+              .infojob.french Nevada Sports
               h3.titreH3.english Ski Salesman and Technician
-              span.english 12/2008 => 04/2009 
-              .infojob.english Nevada Sports l&rsquo;Alpe d&rsquo;Huez
+              .infojob.english Nevada Sports
               h3.titreH3.spanish Vendedor de esquí y de material deportivo
-              .infojob.spanish Nevada Sports l&rsquo;Alpe d&rsquo;Huez
+              .infojob.spanish Nevada Sports
+              span 12/2008 => 04/2009: l&rsquo;Alpe d&rsquo;Huez 
             .jobs
               h3.titreH3.french Technicien ADSL
-              span.french 07/2008 => 12/2008 
-              .infojob.french British Telecom Critical Systems Le Plessis-Robinson
+              .infojob.french British Telecom Critical Systems
               h3.titreH3.english ADSL Technician
-              span.english 07/2008 => 12/2008 
-              .infojob.english British Telecom Critical Systems Le Plessis-Robinson
+              .infojob.english British Telecom Critical Systems
               h3.titreH3.spanish Técnico de ADSL
-              .infojob.spanish British Telecom Critical Systems Le Plessis-Robinson
+              .infojob.spanish British Telecom Critical Systems
+              span 07/2008 => 12/2008: Le Plessis-Robinson
             .jobs
               h3.titreH3.french Technicien Ski et Snowboard
-              span.french 12/2007 => 04/2008 
-              .infojob.french Intersport, l&rsquo;Alpe d&rsquo;Huez
+              .infojob.french Intersport
               h3.titreH3.english Ski and Snowboard Technician
-              span.english 12/2007 => 04/2008 
-              .infojob.english Intersport, l&rsquo;Alpe d&rsquo;Huez
+              .infojob.english Intersport
               h3.titreH3.spanish Técnico de esquí y snowboard
-              .infojob.spanish Intersport, l&rsquo;Alpe d&rsquo;Huez
+              .infojob.spanish Intersport
+              span 12/2007 => 04/2008: l&rsquo;Alpe d&rsquo;Huez
             .jobs
               h3.titreH3.french Technicien systemes et Administrateur reseaux microsoft
               h3.titreH3.english Systems technician and Microsoft Network Administrator 
               h3.titreH3.spanish Técnico y Administrador de Sistemas y Redes microsoft
-              span 09/2005 => 06/2007 
-              .infojob.french Administration serveurs Windows et clients GNU/LINUX Maintenance et installation systemes informatique Developpement html php (script de backup) SECOB, St Jean-de-la-Ruelle
-              .infojob.english Windows server administration and GNU / LINUX clients Maintenance and installation of computer systems, html php development (backup script), SECOB, St Jean-de-la-Ruelle
-              .infojob.spanish Administración de servidores Windows y clientes GNU / LINUX Mantenimiento e instalación de sistemas infojobrmáticos, desarollamiento html php (script de copia de seguridad), SECOB, St Jean-de-la-Ruelle
+              .infojob.french Administration serveurs Windows et clients GNU/LINUX Maintenance et installation systemes informatique Developpement html php (script de backup)
+              .infojob.english Windows server administration and GNU / LINUX clients Maintenance and installation of computer systems, html php development (backup script)
+              .infojob.spanish Administración de servidores Windows y clientes GNU / LINUX Mantenimiento e instalación de sistemas infojobrmáticos, desarollamiento html php (script de copia de seguridad)
+              span 09/2005 => 06/2007: SECOB, St Jean-de-la-Ruelle
             .jobs
               h3.titreH3.french Technicien Systemes et Reseaux
               h3.titreH3.english Systems and Networks Technician
               h3.titreH3.spanish Técnico de Sistemas y Redes
-              span 03/2005 => 06/2005 
-              .infojob.french Maintenance et installation systemes informatique Developpement html php d&apos;un site de devis securis&eacute; Emergence, Orl&eacute;ans, 2004
-              .infojob.english Maintenance and installation of computer systems PHP html development of a secured quote site Emergence, Orléans, 2004
-              .infojob.spanish Mantenimiento e instalación de sistemas infojobrmáticos PHP html desarrollo de un sitio de cotizaciones seguras Emergence, Orléans, 2004
+              .infojob.french Maintenance et installation systemes informatique Developpement html php d&apos;un site de devis securis&eacute;
+              .infojob.english Maintenance and installation of computer systems PHP html development of a secured quote site Emergence
+              .infojob.spanish Mantenimiento e instalación de sistemas infojobrmáticos PHP html desarrollo de un sitio de cotizaciones seguras
+              span 03/2005 => 06/2005: Emergence, Orléans
             .jobs
               h3.titreH3.french Adjoint au responsable de magasin
               h3.titreH3.english Assistant to the store manager
               h3.titreH3.spanish Asistente del gerente de la tienda
-              span 06/2003 => 02/2004  
-              .infojob.french Micromania, St Jean de la Ruelle
-              .infojob.english Micromania, St Jean de la Ruelle
-              .infojob.spanish Micromania, St Jean de la Ruelle
+              .infojob.french Micromania
+              .infojob.english Micromania
+              .infojob.spanish Micromania
+              span 06/2003 => 02/2004: St Jean de la Ruelle
             .jobs
               h3.titreH3.french Emplois etudiant
               .infojob.french Conseiller de vente en espace culturel Leclerc, serveur/barman, Ouvrier boulanger, Employ&eacute; polyvalent chez Intermarch&eacute;
@@ -211,7 +205,6 @@ append content
             h3.titreH2.spanish Formación
             .jobs
               h3.titreH3 Pepiniere IBM
-              span 2018 OCSI Paris 01
               .infojob.french Développement RPGLE et CL
               .infojob.english Développement RPGLE et CL
               .infojob.spanish Développement RPGLE et CL
@@ -221,11 +214,11 @@ append content
               .infojob.french Webservices for IBM i series
               .infojob.english Webservices for IBM i series
               .infojob.spanish Webservices for IBM i series
+              span 2018 OCSI Paris I
             .jobs
               h3.titreH3.french Developpeur JavaScript FullStack
               h3.titreH3.english FullStack Javascript Developer
               h3.titreH3.spanish Desarollador Javascript de pila completa
-              span 2017 IFOCOP Paris 11
               .infojob.french Développement et management d&apos;un projet web
               .infojob.english Development and management of a web project
               .infojob.spanish Desarolla y gestión de un proyecto web
@@ -235,11 +228,11 @@ append content
               .infojob.french Cr&eacute;ation d&apos;applications web et mobiles riche backend JS
               .infojob.english Creating rich web and mobile applications backend JS
               .infojob.spanish Creación de aplicaciones web y móviles ricas en el back-end de JS
+              span 2017 IFOCOP Paris XI
             .jobs
               h3.titreH3.french TP de technicien etude en batiment option dessin
               h3.titreH3.english Construction Engineer Technician Drawing Option
               h3.titreH3.spanish Técnico de Ingeniería de Construcción Opción de Dibujo
-              span 2009 AFPA La Valette-du-var
               .infojob Photoshop, Autocad, Archicad, Artlantis
               .infojob.french Design, techniques et normes de construction
               .infojob.english Design, techniques and construction standards
@@ -247,9 +240,9 @@ append content
               .infojob.french Notions d&apos;urbanisme et de voirie
               .infojob.english Notions of town planning and roads
               .infojob.spanish Nociones de urbanismo y carreteras
+              span 2009 AFPA La Valette-du-var
             .jobs
               h3.titreH3 DUT informatique genie logiciel
-              span 2003 IUT d'Orléans
               .infojob.french Syst&eacute;mes et R&eacute;seaux: Administration et d&eacute;ploiementent r&eacute;seau de syst&egrave;mes en environnement Linux, regexp/assembleur
               .infojob.french Base de Donn&eacute;es: Analyse (merise), conception (MCD, MCT), maintenance
               .infojob.french Programmation: Langage C, C++, SQL, bsh, assembly language
@@ -259,14 +252,15 @@ append content
               .infojob.spanish Sistemas y Redes: Red de administración e implementación de sistemas en entorno Linux, nociones de ensamblador regexp        
               .infojob.spanish Base de Datos: Análisis (merise), diseño (MCD, MCT), mantenimiento
               .infojob.spanish Programación: Langage C, C++, SQL, bsh, assembly language
+              span 2003 IUT d'Orléans
             .jobs
               h3.titreH3.french Baccalaureat Scientifique
               h3.titreH3.english Scientific Baccalaureate Diploma
               h3.titreH3.spanish Bachillerato Científico        
-              span 2001 Orléans
               .infojob.french Sp&eacute;cialit&eacute; physique-chimie
               .infojob.english Specialty physics-chemistry
               .infojob.spanish Especialidad física-química
+              span 2001 Orléans
           .competen#complementaire
             .infojob.french Permis : auto, moto.
               img.linkedin(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin' onclick='openlinkedin();')
@@ -283,7 +277,7 @@ append content
             .infojob.spanish HOBBIES: electrónica, decoración, diseño, renovación.
             //.web www.mikael.ml
 append scripts
-  script(src='/static/js/trad.js' defer)
+  script(src='/static/js/trad.js')
   script.
     $('#intro').removeClass('css3buttonRed')
     $('#intro').addClass('css3button')
