--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -37,9 +37,9 @@ html(lang="en")
         a.minilogR(rel='preconnect' href='https://www.linkedin.com/in/mika%C3%ABl-garcia/')
           img(src='/static/img/LinkedIn_Logo.svg' alt='linkedin' height='35')
     block scripts
-      script(src='/static/js/jquery-3.3.1.min.js' defer)
-      script(src='/static/js/jquery-ui.min.js' defer)
-      script(src='./static/js/particles.min.js' defer)
+      script(src='/static/js/jquery-3.3.1.min.js')
+      script(src='/static/js/jquery-ui.min.js')
+      script(src='./static/js/particles.min.js')
       //script(src='/static/js/socket.io.js')
       script.
         window.onload = function() {
